crates/myso-package-resolver/src/snapshots/myso_package_resolver__tests__pure_input_layouts_overlapping.snap
---
source: crates/myso-package-resolver/src/lib.rs
expression: output
---
???
u64
???
u64
???
struct 0x1::option::Option<0x1::string::String> {
    vec: vector<struct 0x1::string::String {
        bytes: vector<u8>,
    }>,
}
vector<struct 0x1::option::Option<0x1::ascii::String> {
    vec: vector<struct 0x1::ascii::String {
        bytes: vector<u8>,
    }>,
}>

